finally fixed the scrollbar!
also includes some adjustments to how thumbnails look when you hover over them. they undoubtedly look less cool, but its whatever

--- a/roots/css/main.css
+++ b/roots/css/main.css
@@ -38,7 +38,7 @@
     }
 
     #logo {
-        width: 80%;
+        width: 70%;
         margin-bottom: 10%;
 
         transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -53,8 +53,8 @@
     }
     
     #page {
-        width: 80%;
-        margin-left: 20%;
+        width: 70%;
+        margin-left: 30%;
         margin-top: 100px;
         
     }
@@ -166,9 +166,11 @@
   /*gameslist, sidebar*/
   #gamelist {
     background-color: rgba(16,16,15,0.6);
-    width: 20%;
+    width: 30%;
+    height: calc(100vh - 55px);
     left: 0px;
     top: 55px; 
+    overflow-y: auto;
 
     display: block;
     position: fixed;
@@ -213,13 +215,12 @@ hr /*divider between game buttons*/ {
 }
 
 #thumbnail {
-    width: 90%;
+    width: 85%;
     height: 0;
     margin: auto;
     margin-top: 0px;
 
     transform: scaleY(0);
-    transform: translateX(0px);
 
     border-radius: 10px;
     transition-timing-function: ease-in-out;
@@ -244,7 +245,7 @@ hr /*divider between game buttons*/ {
 }
 
 #thumbnail:hover {
-    width: 120%;
+    width: 98%;
     position: relative;
   
     filter: drop-shadow(.5rem .5rem 1rem black);
